// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot - empty fullfillment options 1`] = `
Array [
  .c0 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 18px;
  font-weight: 700;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.25;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
}

<h3
    className="c0"
  >
    2
    . 
    Choose a shipping method
  </h3>,
  .c0 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-style: normal;
}

<span
    className="c0"
  >
    No fulfillment methods
  </span>,
]
`;

exports[`basic snapshot 1`] = `
.c0 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 18px;
  font-weight: 700;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.25;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
}

<div>
  <h3
    className="c0"
  >
    2
    . 
    Choose a shipping method
  </h3>
  SelectableList(undefined)
</div>
`;
